--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     }
 
 	</script>
+	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	
 	<script>
 
 	function createCookie(name,value,days) {
@@ -67,8 +69,9 @@
 					createCookie("age",age,365*100);
 					createCookie("town",town,365*100);
 	}
-</script>
+	</script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	
 	<style>
 		.content {
 			text-align:left;
@@ -139,10 +142,7 @@
 </style>
 
 </head>
-<<<<<<< HEAD
-<body onLoad="loadCookies()">
-=======
-<body onLoad="page_load()">
+<body onLoad="page_load()" onLoad="loadCookies()">
 
 <div data-role="page" id="loading">
 	<div data-role="header" data-position="fixed">
@@ -186,19 +186,14 @@
 		</div><!-- /collapsible -->
 	</div>
 </div>
->>>>>>> test-ns
 
 
 <div data-role="page" id="filter">
 	<div data-role="header" data-position="fixed">
-<<<<<<< HEAD
-		<h1>Juvenile Resource Finder</h1>
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
-=======
 		<h1>Resource Finder</h1>
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a> 
 		<a href="#region" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-left ui-icon-gear" data-transition="slideup"></a> 
->>>>>>> test-ns
 	</div>
 	
 	<div data-role="content" class="content">
@@ -224,13 +219,9 @@
     		<label for="radio-choice-h-2b">Map View</label>
 		</fieldset>
 
-<<<<<<< HEAD
 		<a href="javascript:results_page();" onClick="saveCookies();i=0;" data-role="button">Find Resources</a>
-=======
 		<a href="#map-page" data-transition="slide" data-role="button">map</a>
 		<a href="#details" data-transition="slide" data-role="button">Details</a>
-		<a href="javascript:results_page();" data-role="button">Find Resources</a>
->>>>>>> test-ns
 
 	</div>
 </div>
@@ -249,11 +240,6 @@
 
 	</div>
 </div>
-
-<<<<<<< HEAD
-
-=======
->>>>>>> test-ns
 
 <div data-role="page" id="details">
 	<div data-role="header" data-position="fixed">
@@ -370,21 +356,15 @@
 
 <script type="text/javascript">
 
-<<<<<<< HEAD
-	var app_id = "appHUknSmoIogemD5";
-	var app_key = "keyHtA4JdvolTnmFV";
-	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Risk","High Risk"],["Multi","Multi-Service"]];
-=======
 	var app_id = "app91Hf1BF6Zx11lT";
 	var app_key = "keyMCwJmZpyayqYhY";
 	
 	function load_api_data(target,mode=3,id='') {
 		
-			apicall = "https://api.airtable.com/v0/"+app_id+"/Eastern;
+			apicall = "https://api.airtable.com/v0/"+app_id+"/Eastern";
 	}
 	
 	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Academic","Academic Support"],["Case","Case Management"],["Mentor","Mentoring"],["Shelter","Shelter"],["LGBTQ","LGBTQ"],["Housing","Housing"]];
->>>>>>> test-ns
 
 	var categories = "";
 	var ages = "";
