--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 		<a href="#map-page" data-transition="slide" data-role="button">map</a>
 		<a href="#details" data-transition="slide" data-role="button">Details</a>
-		<a href="javascript:results_page();" data-role="button" onClick="saveCookies();">Find Resources</a>
+		<a href="javascript:results_page();" data-role="button" onClick="saveCookies();i=0">Find Resources</a>
 
 	</div>
 </div>
