--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 </style>
 
 </head>
-<body onLoad="page_load()" onLoad="loadCookies()">
+<body onLoad="page_load();loadCookies()">
 
 <div data-role="page" id="loading">
 	<div data-role="header" data-position="fixed">
