--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 </style>
 
 </head>
-<body onLoad="page_load()" onLoad="loadCookies()">
+<body onLoad="page_load();onLoad="loadCookies()">
 
 <div data-role="page" id="loading">
 	<div data-role="header" data-position="fixed">
@@ -169,7 +169,7 @@
 		<div data-role="collapsible" data-inset="false">
     		<h3>Massachusetts</h3>
     			<ul data-role="listview">
-    				<li><a href="#filter">Cape Code & the Islands</a></li>
+    				<li><a href="#filter" onClick="createCookies('region','cape',365*100);">Cape Code & the Islands</a></li>
     				<li><a href="#filter">Central Massachusetts</a></li>
         			<li><a href="#filter">Eastern Massachusetts</a></li>
         			<li><a href="#filter">Northeastern Massachusetts</a></li>
@@ -197,7 +197,7 @@
 	</div>
 	
 	<div data-role="content" class="content">
-		<div class="ui-field-contain">Use the following selections to find juvenile social, community based programs & services in and around Boston.
+		<div class="ui-field-contain">Use the following selections to find social, community based programs & services in Massachusetts.
 			<select id="town" name="select-native-1" id="select-native-1" style="width:100%" onChange="list_page();saveCookies();">
         		<option value="0">Choose a Location</option>
 						<option id="loading_selection" value="0">Loading Locations...</option>
@@ -205,7 +205,7 @@
     		</select>
 		</div>
 
-		<p> Enter age of the juvenile seeking services. Leave age blank to view all services.</p>
+		<p> Enter age of the person seeking services. Leave age blank to view all services.</p>
 		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();saveCookies();">
 
 		<fieldset id="categories" data-role="controlgroup">
@@ -361,7 +361,7 @@
 	
 	function load_api_data(target,mode=3,id='') {
 		
-			apicall = "https://api.airtable.com/v0/"+app_id+"/Eastern";
+			apicall = "https://api.airtable.com/v0/"+app_id+"/Locations";
 	}
 	
 	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Academic","Academic Support"],["Case","Case Management"],["Mentor","Mentoring"],["Shelter","Shelter"],["LGBTQ","LGBTQ"],["Housing","Housing"]];
